--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "flatted": "^3.2.5",
+    "follow-redirects": "^1.15.1",
+    "node-libcurl": "^2.3.4",
     "reflect-metadata": "^0.1.13",
+    "request-curl": "^1.4.1",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
