--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "flatted": "^3.2.5",
     "follow-redirects": "^1.15.1",
+    "got": "^11.8.3",
     "node-libcurl": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "request-curl": "^1.4.1",
